# vacancy-aggregator

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 32dbb22b8747_add_vacancy_table_and_user_relationship.py  b6fb152dff4e_added_user_table.py
app/: main.py
app/api/: handlers.py
app/api/endpoints/: login.py  users.py  vacancies.py
app/core/: config.py  redis_client.py  security.py
app/crud/: user.py  vacancy.py
app/db/: session.py
app/graphql/: queries.py  schema.py  types.py
app/models/: __init__.py  user.py  vacancy.py
app/schemas/: token.py  user.py  vacancy.py
app/services/: parser.py
